Ajout: nouveaux logos compétences Modif: ajout /environnments dans Dockerfile Fix: bug lien externe Button component Fix: wrap compétence landing page Modif: modification contenu expertises dans about me

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -57,6 +57,7 @@
     .logos {
         display: flex;
         justify-content: flex-start;
+        flex-wrap: wrap;
         gap: 4rem;
         margin-top: 2.5rem;
     }
