--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -40,6 +40,7 @@
     .logos {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 4rem;
         margin-top: 2.5rem;
     }
